@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-19T12:18:06Z",
+  "timestamp" : "2025-12-21T12:16:22Z",
   "count_outdated" : 6124,
   "uniques_outdated" : 1301,
-  "count" : 6244,
-  "uniques" : 1318,
+  "count" : 6248,
+  "uniques" : 1319,
   "views" : [
     {
       "timestamp": "2025-12-08T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-12-21T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
