@@ -1,6 +1,6 @@
 {
-  "count": 120,
-  "uniques": 11,
+  "count": 124,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2025-12-08T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2025-12-18T00:00:00Z",
       "count": 21,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-12-21T00:00:00Z",
+      "count": 4,
+      "uniques": 1
     }
   ]
 }
