@@ -1,3 +1,12 @@
+2025-12-21T12:16:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20409679641 # 1379
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-21
+* notice: last 14d: unq all: 12 124
+* notice: prev accum: outdated-unq outdated-all / unq all: 1301 6124 / 1318 6244
+* notice: next accum: outdated-unq outdated-all / unq all: 1301 6124 / 1319 6248
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [] / [2025-12-21]
+
 2025-12-19T12:18:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20369786313 # 1375
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
